--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@
 /PowerState.class
 /DoublePointsPower.class
 /DoublePointsObject.class
+/WinAndLoseScreen.class
+/WinAndLooseScreen.class
+/PowerUp.class
+/DoublePoints.class
